Update module-albums skeleton
