# youband-manager/module-albums/api-docs.yaml
@@ -3,82 +3,21 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://localhost:8080
-  description: Generated server url
+  - url: http://localhost:8080
+    description: Generated server url
 paths:
-  /api/songs/{id}:
-    get:
-      tags:
-      - song-rest-controller
-      operationId: findById
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/SongDto'
-    put:
-      tags:
-      - song-rest-controller
-      operationId: updateSong
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SongDto'
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/SongDto'
-    delete:
-      tags:
-      - song-rest-controller
-      operationId: deleteSong
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/SongDto'
   /api/albums/{id}:
     get:
       tags:
-      - album-rest-controller
-      operationId: findById_1
+        - album-rest-controller
+      operationId: findById
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
       responses:
         "200":
           description: OK
@@ -88,15 +27,15 @@ paths:
                 $ref: '#/components/schemas/AlbumDto'
     put:
       tags:
-      - album-rest-controller
+        - album-rest-controller
       operationId: updateAlbum
       parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
       requestBody:
         content:
           application/json:
@@ -110,10 +49,28 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/AlbumDto'
-  /api/songs:
+    delete:
+      tags:
+        - album-rest-controller
+      operationId: deleteAlbum
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AlbumDto'
+  /api/albums:
     get:
       tags:
-      - song-rest-controller
+        - album-rest-controller
       operationId: getAll
       responses:
         "200":
@@ -123,16 +80,16 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/SongDto'
+                  $ref: '#/components/schemas/AlbumDto'
     post:
       tags:
-      - song-rest-controller
-      operationId: createSong
+        - album-rest-controller
+      operationId: createAlbum
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SongDto'
+              $ref: '#/components/schemas/AlbumDto'
         required: true
       responses:
         "200":
@@ -140,81 +97,14 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/SongDto'
-  /api/albums:
-    get:
-      tags:
-      - album-rest-controller
-      operationId: getAll_1
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AlbumDto'
+                $ref: '#/components/schemas/AlbumDto'
 components:
   schemas:
-    SongDto:
-      required:
-      - duration
-      - title
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: Song's identification number
-          example: 7
-        title:
-          type: string
-          description: Song's title
-          example: Molly's lips
-        duration:
-          type: object
-          description: Song's duration
-          properties:
-            seconds:
-              type: integer
-              format: int64
-            nano:
-              type: integer
-              format: int32
-            negative:
-              type: boolean
-            zero:
-              type: boolean
-            units:
-              type: array
-              items:
-                type: object
-                properties:
-                  dateBased:
-                    type: boolean
-                  timeBased:
-                    type: boolean
-                  duration:
-                    type: object
-                    properties:
-                      seconds:
-                        type: integer
-                        format: int64
-                      nano:
-                        type: integer
-                        format: int32
-                      negative:
-                        type: boolean
-                      zero:
-                        type: boolean
-                  durationEstimated:
-                    type: boolean
     AlbumDto:
       required:
-      - genre
-      - name
-      - releaseDate
+        - genre
+        - name
+        - releaseDate
       type: object
       properties:
         id:
@@ -225,27 +115,47 @@ components:
         name:
           type: string
           description: album's name
-          example: In utero
+          example: Nevermind
         releaseDate:
           type: string
           format: date-time
-          description: album's release date
+          description: album's date of release
         genre:
           type: string
-          description: album's genre type
-          example: ROCK
+          description: album's music genre
           enum:
-          - ROCK
-          - POP
-          - PUNK
-          - COUNTRY
-          - RAP
-          - K_POP
-          - FUNK
-          - REGGAE
-          - FOLK
-          - JAZZ
-          - DISCO
-          - CLASSIC
-          - BLUES
-          - VOCAL
+            - ROCK
+            - POP
+            - PUNK
+            - COUNTRY
+            - RAP
+            - K_POP
+            - FUNK
+            - REGGAE
+            - FOLK
+            - JAZZ
+            - DISCO
+            - CLASSIC
+            - BLUES
+            - VOCAL
+        songs:
+          type: array
+          description: list of album's songs
+          items:
+            $ref: '#/components/schemas/Song'
+    Song:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: song's identification number
+          example: 3
+        title:
+          type: string
+          description: song's name
+          example: Personal jesus
+        duration:
+          type: string
+          description: song's duration in minutes and seconds
+          example: "PT5M1S"
