# youband-manager/module-albums/src/main/java/cz/muni/fi/pa165/modulealbums/api/AlbumDto.java
@@ -1,9 +1,11 @@
 package cz.muni.fi.pa165.modulealbums.api;
 
 import cz.muni.fi.pa165.modulealbums.data.enums.Genre;
+import cz.muni.fi.pa165.modulealbums.data.model.Song;
 import jakarta.validation.constraints.NotNull;
 
 import java.util.Date;
+import java.util.List;
 
 public class AlbumDto {
     private Long id;
@@ -13,14 +15,19 @@ public class AlbumDto {
     private Date releaseDate;
     @NotNull
     private Genre genre;
+    private List<Song> songs;
 
     public AlbumDto() {}
 
-    public AlbumDto(Long id, @NotNull String name, @NotNull Date releaseDate, @NotNull Genre genre) {
+    public AlbumDto(Long id, @NotNull String name,
+                    @NotNull Date releaseDate,
+                    @NotNull Genre genre,
+                    List<Song> songs) {
         this.id = id;
         this.name = name;
         this.releaseDate = releaseDate;
         this.genre = genre;
+        this.songs = songs;
     }
 
     public Long getId() {
@@ -39,6 +46,10 @@ public class AlbumDto {
         return genre;
     }
 
+    public List<Song> getSongs() {
+        return songs;
+    }
+
     public void setId(Long id) {
         this.id = id;
     }
@@ -55,11 +66,16 @@ public class AlbumDto {
         this.genre = genre;
     }
 
+    public void setSongs(List<Song> songs) {
+        this.songs = songs;
+    }
+
     @Override
     public String toString() {
         return "AlbumDto{" + "id=" + id +
                 ", name='" + name + '\'' +
                 ", releaseDate=" + releaseDate +
-                ", genre=" + genre + '}';
+                ", genre=" + genre +
+                ", songs=" + songs + '}';
     }
 }
